--- a/home.css
+++ b/home.css
@@ -74,13 +74,11 @@ img.pic {
     left: 15px;
     z-index: 100;
     width: max-content;
-    color: white;
 }
 .logo img{
     width: 80px;
 }
 .menu{
-    font-size: 20px;
     line-height: 60px;
     width: 30%;
 }
@@ -91,6 +89,14 @@ img.pic {
 .menu ul li{
     list-style: none;
 }
+.menu ul li a{
+    font-size: 30px;
+}
+/* .menu ul li:hover a{
+    color:aqua;
+    font-size: 35px;
+    transition: all 1s;
+} */
 .order{
     text-align: center;
     z-index: 3;
@@ -331,7 +337,7 @@ html{
     background-attachment: fixed;
 }
 .abc{
-    margin-top: 250px;
+    margin-top: 970px;
     padding: 20px;
     width: 100%;
     height: 45vh;
@@ -341,7 +347,7 @@ html{
     width: 500px;
     position: absolute;
     left: 60%;
-    top:380vh;
+    top:490vh;
 }
 .drink .pizza:hover img{
     transform: scale(1.1);
@@ -439,4 +445,19 @@ html{
 .left1 img{
     margin: 30px;
     width: 150px;
+}
+#buy_drink button{
+    width: 30px;
+    height: 30px;
+    color: black;
+    font-size: 25px;
+    line-height: 30px;
+    text-align: center;
+}
+.drink_num{
+    width: 40px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    border: 2px solid white;
 }
